--- a/client/styles/components/_masthead.scss
+++ b/client/styles/components/_masthead.scss
@@ -1,5 +1,9 @@
 .masthead {
   @extend %layout-padding;
+  position: absolute;
+  top: 0;
+  right: 0;
+  left: 0;
   white-space: nowrap;
   color: #ffffff;
 }
