--- a/client/styles/components/_share.scss
+++ b/client/styles/components/_share.scss
@@ -16,7 +16,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background: url('/images/ui/social.svg') no-repeat;
+    background: url('../images/ui/social.svg') no-repeat;
     background-size: auto 40px;
     transition: opacity 0.5s;
   }
